--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,10 @@ streamlit
 pandas
 plotly
 numpy
-openpyxl
+altair
+requests
+# Untuk mengintegrasikan Folium (peta interaktif)
+folium
+streamlit-folium
+# Untuk menangkap event klik pada grafik Plotly
+streamlit-plotly-events
