--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 streamlit
 pandas
 plotly
-numpy
 altair
-requests
-# Untuk mengintegrasikan Folium (peta interaktif)
-folium
 streamlit-folium
-# Untuk menangkap event klik pada grafik Plotly
-streamlit-plotly-events
-openpyxl
+folium
+requests
+streamlit-gsheets
+datetime
+re
+time
